--- a/Michelles_Portfolio/package.json
+++ b/Michelles_Portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "michelles-portfolio",
-  "homepage": "https://michelleW1234.github.io/deployed_portfolio/",
+  "homepage": "https://michelleW1234.github.io/Michelles_Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
